WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194420
Fix Abs(Neg(x)) -> Abs(x) optimization in B3ReduceStrength
https://bugs.webkit.org/show_bug.cgi?id=194420
Summary
Fix Abs(Neg(x)) -> Abs(x) optimization in B3ReduceStrength
Robin Morisset
Reported
2019-02-07 16:32:35 PST
In
https://bugs.webkit.org/show_bug.cgi?id=194250
, I added an optimization: Abs(Neg(x)) -> Abs(x). But I introduced two bugs, one is that I actually implemented Abs(Neg(x)) -> x, and the other is that the test is looking at Abs(Abs(x)) instead (both were stupid copy-paste mistakes). This trivial patch fixes both.
Attachments
Patch
(2.23 KB, patch)
2019-02-07 16:35 PST
,
Robin Morisset
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Morisset
Comment 1
2019-02-07 16:35:22 PST
Created
attachment 361468
[details]
Patch
WebKit Commit Bot
Comment 2
2019-02-07 17:01:43 PST
Comment on
attachment 361468
[details]
Patch Clearing flags on attachment: 361468 Committed
r241176
: <
https://trac.webkit.org/changeset/241176
>
WebKit Commit Bot
Comment 3
2019-02-07 17:01:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-02-07 17:02:31 PST
<
rdar://problem/47903347
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug